Add unregistration
